--- a/apps/tne-api/external-secret.yaml
+++ b/apps/tne-api/external-secret.yaml
@@ -6,12 +6,19 @@ metadata:
 spec:
   target:
     template:
-      metadata:
-        labels: {}
-  dataFrom:
-    - extract:
-        key: tne-api
-
+      engineVersion: v2
+      data:
+        SERVICE_ACCOUNT_EMAIL: "{{ .email }}"
+        SERVICE_ACCOUNT_KEY: "{{ .key }}"
+  data:
+    - secretKey: email
+      remoteRef:
+        key: tne-api-google-sa
+        property: client_email
+    - secretKey: key
+      remoteRef:
+        key: tne-api-google-sa
+        property: private_key
   refreshInterval: 24h
   secretStoreRef:
     kind: ClusterSecretStore
