--- a/apps/invoiceninja/values.yaml
+++ b/apps/invoiceninja/values.yaml
@@ -632,6 +632,8 @@ invoiceninja:
     ## To use an external database set this to false and configure the externaldb parameters
     ##
     enabled: true
+    image:
+      tag: 11.3.2-debian-12-r9
     ## MariaDB Authentication parameters
     ##
     auth:
