--- a/apps/invoiceninja/chart/values.yaml
+++ b/apps/invoiceninja/chart/values.yaml
@@ -656,7 +656,7 @@ invoiceninja:
     user: invoiceninja
     ## Database password
     ##
-    password: "invoiceninja"
+    password: ""
     ## Database name
     ##
     database: invoiceninja
