--- a/apps/invoiceninja/kustomization.yaml
+++ b/apps/invoiceninja/kustomization.yaml
@@ -10,3 +10,6 @@ images:
   - name: invoiceninja
     newName: invoiceninja/invoiceninja
     newTag: 5.0.52
+  - name: nginx
+    newName: nginx
+    newTag: 1.27.0
