fix: nginx configmap

--- a/apps/invoiceninja/kustomization.yaml
+++ b/apps/invoiceninja/kustomization.yaml
@@ -13,3 +13,8 @@ images:
   - name: nginx
     newName: nginx
     newTag: 1.27.0
+
+configMapGenerator:
+  - name: invoiceninja-nginx-config
+    files:
+    - nginx.conf
