--- a/apps/cd-release-calendar/deployment.yaml
+++ b/apps/cd-release-calendar/deployment.yaml
@@ -46,25 +46,22 @@ spec:
             failureThreshold: 30
             periodSeconds: 5
             successThreshold: 1
-            httpGet:
-              port: http
-              path: /status
+            grpc:
+              port: 8080
             timeoutSeconds: 1
           livenessProbe:
             failureThreshold: 3
             periodSeconds: 10
             successThreshold: 1
-            httpGet:
-              port: http
-              path: /status
+            grpc:
+              port: 8080
             timeoutSeconds: 1
           readinessProbe:
             failureThreshold: 3
             periodSeconds: 10
             successThreshold: 1
-            httpGet:
-              port: http
-              path: /status
+            grpc:
+              port: 8080
             timeoutSeconds: 1
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
