--- a/apps/cd-release-calendar/kustomization.yaml
+++ b/apps/cd-release-calendar/kustomization.yaml
@@ -8,4 +8,4 @@ resources:
 images:
 - name: cd-release-calendar
   newName: ghcr.io/the-network-effect/release-calendar-api
-  newTag: v1.1.2
+  newTag: cors-test-10
