fix: tne-api secret

--- a/apps/tne-api/external-secret.yaml
+++ b/apps/tne-api/external-secret.yaml
@@ -10,6 +10,7 @@ spec:
       data:
         SERVICE_ACCOUNT_EMAIL: "{{ .email }}"
         SERVICE_ACCOUNT_KEY: "{{ .key }}"
+        STRIPE_KEY: "{{ .stripe_key }}"
   data:
     - secretKey: email
       remoteRef:
@@ -19,6 +20,10 @@ spec:
       remoteRef:
         key: tne-api-google-sa
         property: private_key
+    - secretKey: stripe_key
+      remoteRef:
+        key: tne-api
+        property: STRIPE_KEY
   refreshInterval: 24h
   secretStoreRef:
     kind: ClusterSecretStore
