chore: save file and point to correct directory

--- a/apps/media/prowlarr.yaml
+++ b/apps/media/prowlarr.yaml
@@ -15,7 +15,5 @@ spec:
 
   source:
     repoURL: https://github.com/patrickjmcd/k8s-argo.git
-    path: apps/media/prowlarr/chart
+    path: apps/media/prowlarr
     targetRevision: main
-    helm:
-      releaseName: prowlarr
