--- a/apps/media/sabnzbd/sabnzbd.template.ini
+++ b/apps/media/sabnzbd/sabnzbd.template.ini
@@ -387,3 +387,11 @@ script = Default
 dir = Music
 newzbin = ""
 priority = -100
+[[books]]
+name = books
+order = 0
+pp = ""
+dir = Books
+script = Default
+newzbin = ""
+priority = -100
