--- a/apps/media/calibre/deployment.yaml
+++ b/apps/media/calibre/deployment.yaml
@@ -41,12 +41,12 @@ spec:
             periodSeconds: 10
             successThreshold: 1
             tcpSocket:
-              port: http
+              port: webserver-gui
             timeoutSeconds: 1
 
           livenessProbe:
             tcpSocket:
-              port: http
+              port: webserver-gui
             failureThreshold: 5
             initialDelaySeconds: 60
             periodSeconds: 10
@@ -58,7 +58,7 @@ spec:
             periodSeconds: 5
             successThreshold: 1
             tcpSocket:
-              port: http
+              port: webserver-gui
             timeoutSeconds: 1
 
           resources:
