--- a/apps/the-irish-aires/external-secret-service-account.yaml
+++ b/apps/the-irish-aires/external-secret-service-account.yaml
@@ -1,15 +1,15 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: the-irish-aires
+  name: the-irish-aires-service-account-b64
   namespace: default
 spec:
   target:
-    name: the-irish-aires
+    name: the-irish-aires-service-account-b64
     creationPolicy: Owner
   dataFrom:
     - extract:
-        key: the-irish-aires
+        key: the-irish-aires-service-account-b64
   refreshInterval: 96h
   secretStoreRef:
     kind: ClusterSecretStore
