fix: set service to loadbalancer

--- a/apps/media/tdarr/server.service.yaml
+++ b/apps/media/tdarr/server.service.yaml
@@ -15,7 +15,7 @@ spec:
   selector:
     app.kubernetes.io/instance: tdarr-server
     app.kubernetes.io/name: tdarr-server
-  type: ClusterIP
+  type: LoadBalancer
 ---
 apiVersion: v1
 kind: Service
