--- a/core/cloudflared-tunnel/config.yaml
+++ b/core/cloudflared-tunnel/config.yaml
@@ -90,6 +90,8 @@ ingress:
     service: http://readarr.media:80
   - hostname: tdarr.pmcd.io
     service: http://tdarr-ui.media:80
+  - hostname: babybuddy.pmcd.io
+    service: http://baby-buddy:80
 
   # ARGO
   - hostname: argo.pmcd.dev
