--- a/apps/baby-buddy/kustomization.yaml
+++ b/apps/baby-buddy/kustomization.yaml
@@ -5,6 +5,6 @@ resources:
 - service.yaml
 
 images:
-- name: babybuddy
+- name: baby-buddy
   newName: lscr.io/linuxserver/babybuddy
   newTag: 2.5.0
