feat: write lake info data to google sheets too

--- a/cronjobs/external-secret.yaml
+++ b/cronjobs/external-secret.yaml
@@ -16,3 +16,23 @@ spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: secretstore
+
+---
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: lake-info-secret
+  namespace: cron
+spec:
+  target:
+    template:
+      metadata:
+        labels: {}
+  dataFrom:
+    - extract:
+        key: lake-info
+
+  refreshInterval: 24h
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: secretstore
