--- a/apps/baby-buddy/deployment.yaml
+++ b/apps/baby-buddy/deployment.yaml
@@ -25,7 +25,7 @@ spec:
           image: baby-buddy
           imagePullPolicy: IfNotPresent
           env:
-            - name: TZ
+            - name: TIME_ZONE
               value: America/Chicago
             - name: DB_ENGINE
               value: django.db.backends.postgresql
