chore: move baby-buddy to mission-critical nodes

--- a/apps/baby-buddy/deployment.yaml
+++ b/apps/baby-buddy/deployment.yaml
@@ -77,3 +77,14 @@ spec:
       restartPolicy: Always
       imagePullSecrets:
         - name: ghcr-registry-cred
+      affinity:
+        nodeAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+            - preference:
+                matchExpressions:
+                  - key: "mission-critical"
+                    operator: In
+                    values:
+                      - "true"
+              weight: 1
+
