--- a/apps/media/tdarr/node.statefulset.yaml
+++ b/apps/media/tdarr/node.statefulset.yaml
@@ -58,6 +58,9 @@ spec:
         - name: config
           persistentVolumeClaim:
             claimName: nfs-config-tdarr-config
+        - name: tdarr-cache
+          persistentVolumeClaim:
+            claimName: nfs-tdarr-cache
       affinity:
         nodeAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
