--- a/apps/media/tdarr/node.statefulset.yaml
+++ b/apps/media/tdarr/node.statefulset.yaml
@@ -43,6 +43,8 @@ spec:
               name: logs
             - mountPath: /media
               name: media
+            - mountPath: /cache
+              name: tdarr-cache
           resources:
             requests:
               cpu: 1000m
