--- a/apps/media/recyclarr.yaml
+++ b/apps/media/recyclarr.yaml
@@ -12,8 +12,8 @@ spec:
     namespace: media
     name: in-cluster
   project: apps
-  #  syncPolicy:
-  #    automated: { }
+  syncPolicy:
+    automated: { }
   source:
     path: apps/media/recyclarr
     repoURL: https://github.com/patrickjmcd/k8s-argo.git
