--- a/apps/media/youtubedl.yaml
+++ b/apps/media/youtubedl.yaml
@@ -12,8 +12,8 @@ spec:
     namespace: media
     name: in-cluster
   project: apps
-  #  syncPolicy:
-  #    automated: { }
+  syncPolicy:
+    automated: { }
   source:
     chart: youtubedl-material
     targetRevision: 4.4.2
