--- a/apps/media/calibre/deployment.yaml
+++ b/apps/media/calibre/deployment.yaml
@@ -77,4 +77,4 @@ spec:
       volumes:
         - name: media
           persistentVolumeClaim:
-            claimName: nfs-media-claim
+            claimName: smb-media-claim
