--- a/apps/media/readarr/deployment.yaml
+++ b/apps/media/readarr/deployment.yaml
@@ -84,4 +84,4 @@ spec:
                 path: config.xml
         - name: media
           persistentVolumeClaim:
-            claimName: nfs-media-claim
+            claimName: smb-media-claim
