--- a/apps/media/sabnzbd/deployment.yaml
+++ b/apps/media/sabnzbd/deployment.yaml
@@ -103,4 +103,4 @@ spec:
           emptyDir: {}
         - name: media
           persistentVolumeClaim:
-            claimName: nfs-media-claim
+            claimName: smb-media-claim
