--- a/apps/media/sonarr/deployment.yaml
+++ b/apps/media/sonarr/deployment.yaml
@@ -90,4 +90,4 @@ spec:
                 path: config.xml
         - name: media
           persistentVolumeClaim:
-            claimName: nfs-media-claim
+            claimName: smb-media-claim
