--- a/apps/media/base/storage.yaml
+++ b/apps/media/base/storage.yaml
@@ -1,56 +1,4 @@
----
-apiVersion: storage.k8s.io/v1
-kind: StorageClass
-metadata:
-  name: nfs-media
-  namespace: media
-provisioner: nfs.csi.k8s.io
-parameters:
-  server: 192.168.1.252
-  share: /volume1/media
-reclaimPolicy: Retain
-volumeBindingMode: Immediate
-mountOptions:
-  - hard
-  - nfsvers=4.1
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: nfs-media
-spec:
-  capacity:
-    storage: 3Gi
-  accessModes:
-    - ReadWriteMany
-  persistentVolumeReclaimPolicy: Retain
-  storageClassName: nfs-media
-  mountOptions:
-    - hard
-    - nolock
-    - nfsvers=4.1
-  csi:
-    driver: nfs.csi.k8s.io
-    readOnly: false
-    volumeHandle: media-volume-id
-    volumeAttributes:
-      server: 192.168.1.252
-      share: /volume1/media
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: nfs-media-claim
-  namespace: media
-spec:
-  accessModes:
-    - ReadWriteMany
-  resources:
-    requests:
-      storage: 3Gi
-  volumeName: nfs-media
-  storageClassName: nfs-media
----
+
 apiVersion: v1
 kind: PersistentVolume
 metadata:
@@ -126,4 +74,47 @@ spec:
     requests:
       storage: 2Ti
   volumeName: smb-media
+  storageClassName: ""
+
+
+
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: smb-appconfig-youtubedl
+  namespace: media
+spec:
+  storageClassName: ""
+  capacity:
+    storage: 200Mi
+  accessModes:
+    - ReadWriteMany
+  persistentVolumeReclaimPolicy: Retain
+  mountOptions:
+    - dir_mode=0777
+    - file_mode=0777
+    - vers=3.0
+  csi:
+    driver: smb.csi.k8s.io
+    readOnly: false
+    volumeHandle: media-smb-youtubedl-volume-id
+    volumeAttributes:
+      source: '//192.168.1.253/AppConfig/youtubedl'
+    nodeStageSecretRef:
+      name: smb-creds
+      namespace: csi-smb-provisioner
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: smb-appconfig-youtubedl-claim
+  namespace: media
+spec:
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: 200Mi
+  volumeName: smb-appconfig-youtubedl
   storageClassName: ""
