--- a/apps/media/overseerr/chart/templates/storage.yaml
+++ b/apps/media/overseerr/chart/templates/storage.yaml
@@ -2,36 +2,39 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: nfs-config-overseerr
+  name: smb-appconfig-overseerr
+  namespace: media
 spec:
+  storageClassName: ""
   capacity:
     storage: 200Mi
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: nfs-config-overseerr
   mountOptions:
-    - hard
-    - nolock
-    - nfsvers=4.1
+    - dir_mode=0777
+    - file_mode=0777
+    - vers=3.0
   csi:
-    driver: nfs.csi.k8s.io
+    driver: smb.csi.k8s.io
     readOnly: false
-    volumeHandle: overseerr-media-volume-id
+    volumeHandle: media-smb-overseerr-volume-id
     volumeAttributes:
-      server: 192.168.1.252
-      share: /volume1/media/config/overseerr
+      source: '//192.168.1.253/AppConfig/overseerr'
+    nodeStageSecretRef:
+      name: smb-creds
+      namespace: csi-smb-provisioner
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: nfs-config-overseerr-claim
+  name: smb-appconfig-overseerr-claim
   namespace: media
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 200Mi
-  volumeName: nfs-config-overseerr
-  storageClassName: nfs-config-overseerr
+  volumeName: smb-appconfig-overseerr
+  storageClassName: ""
