chore: set permissions for youtubedl

--- a/apps/media/youtubedl.yaml
+++ b/apps/media/youtubedl.yaml
@@ -27,6 +27,8 @@ spec:
 
         env:
           TZ: America/Chicago
+          UID: "1000"
+          GID: "1000"
 
         persistence:
           media:
