--- a/apps/media/youtubedl.yaml
+++ b/apps/media/youtubedl.yaml
@@ -20,5 +20,34 @@ spec:
     repoURL: https://k8s-at-home.com/charts/
     helm:
       releaseName: youtubedl
-      valueFiles:
-        - youtubedl/values.yaml
+      valuesObject:
+        image:
+          repository: tzahi12345/youtubedl-material
+          tag: "4.3.2"
+
+        env:
+          TZ: America/Chicago
+          UID: "1000"
+          GID: "1000"
+
+        persistence:
+          media:
+            enabled: true
+            existingClaim: smb-media-claim
+            subPath: video/youtube
+            mountPath: /app/video
+
+          config:
+            enabled: true
+            emptyDir: false
+            existingClaim: smb-appconfig-youtubedl-claim
+            mountPath: /app/appdata
+
+        resources:
+          requests:
+            memory: 128Mi
+            cpu: 0.1
+          limits:
+            memory: 1Gi
+            cpu: 2
+
