--- a/apps/media/tdarr/node.statefulset.yaml
+++ b/apps/media/tdarr/node.statefulset.yaml
@@ -59,7 +59,7 @@ spec:
             claimName: smb-media-claim
         - name: config
           persistentVolumeClaim:
-            claimName: nfs-config-tdarr-config
+            claimName: smb-appconfig-tdarr-config
         - name: tdarr-cache
           persistentVolumeClaim:
             claimName: nfs-tdarr-cache
