--- a/apps/media/tdarr/pvc.yaml
+++ b/apps/media/tdarr/pvc.yaml
@@ -1,32 +1,3 @@
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: nfs-config-tdarr-server
-  namespace: media
-spec:
-  accessModes:
-    - ReadWriteMany
-  resources:
-    requests:
-      storage: 1Gi
-  storageClassName: nfs-config-tdarr-server
-  volumeName: nfs-config-tdarr-server
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: nfs-config-tdarr-config
-  namespace: media
-spec:
-  accessModes:
-    - ReadWriteMany
-  resources:
-    requests:
-      storage: 1Gi
-  storageClassName: nfs-config-tdarr-config
-  volumeName: nfs-config-tdarr-config
----
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -41,3 +12,32 @@ spec:
   storageClassName: nfs-tdarr-cache
   volumeName: nfs-tdarr-cache
 
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: smb-appconfig-tdarr-server-claim
+  namespace: media
+spec:
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: 200Mi
+  volumeName: smb-appconfig-tdarr-server
+  storageClassName: ""
+
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: smb-appconfig-tdarr-config-claim
+  namespace: media
+spec:
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: 200Mi
+  volumeName: smb-appconfig-tdarr-config
+  storageClassName: ""
